--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,10 @@
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.codepoetics</groupId>
+            <artifactId>protonpack</artifactId>
+            <version>1.9</version>
+        </dependency>
     </dependencies>
 </project>
