--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 .idea
 *.iml
+**/*.DS_Store
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
