add copyright headers

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 
   <organization>
     <name>HuC DI (KNAW)</name>
-    <url>https://huc.knaw.nl</url>
+    <url>https://it.huygens.knaw.nl/</url>
   </organization>
 
   <developers>
